added default route, renamed project, added firebase dependency

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "weather-report": {
+    "weather-report-angular": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/weather-report",
+            "outputPath": "dist/weather-report-angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "weather-report:build:production"
+              "buildTarget": "weather-report-angular:build:production"
             },
             "development": {
-              "buildTarget": "weather-report:build:development"
+              "buildTarget": "weather-report-angular:build:development"
             }
           },
           "defaultConfiguration": "development"
